small change to ExitCommand.java getFirst() is now get(0), don't have updated java version